--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ POSTGRES_PORT=5432
 
 # Для FastAPI (строка подключения к БД)
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# Приложение
+DEBUG=True
