fix: migrations not applying in Docker container
Problem:
- sqlalchemy.exc.ProgrammingError: relation 'users' does not exist
- Alembic migrations not running on container startup

Root cause:
- Volume mount (.:/app) overrides alembic/versions directory
- Migration files not found inside container

Solution:
- Create migrations locally before running Docker
- Run 'alembic upgrade head' manually in container
- Added hot reload for development (no rebuild needed)

Usage:
1. Create migrations locally: alembic revision --autogenerate -m 'msg'
2. Apply in container: docker compose run --rm api alembic upgrade head
3. Start app: docker compose up -d

Dev workflow:
- Code changes auto-reload (uvicorn --reload)
- Model changes: create migration locally + apply in container
- Reset DB: docker compose down -v

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ sqlalchemy
 python-jose
 passlib
 pydantic
+fastapi
+asyncpg
+email-validator
+alembic
+uliweb-alembic
+python-dotenv
+psycopg2-binary
+uvicorn
