feat: initial project setup with auth and migrations

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ POSTGRES_DB=mydb
 POSTGRES_PORT=5432
 
 # Для FastAPI (строка подключения к БД)
-DATABASE_URL=postgresql+asyncpg://myuser:mypassword@localhost:5432/mydb
+DATABASE_URL=postgresql+asyncpg://myuser:mypassword@postgres:5432/mydb
 
 # Приложение
 DEBUG=True
