add format in pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,28 @@ on:
       - develop
 
 jobs:
+  format-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Ruff
+        run: pip install ruff
+
+      - name: Check code format and lint
+        run: ruff check app/ tests/
+
+      - name: Check formatting style
+        run: ruff format --check app/ tests/
+
   docker-build:
     runs-on: ubuntu-latest
+    needs: format-check
     steps:
       - uses: actions/checkout@v4
 
